--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,24 @@
-<p>
-  login works!
-</p>
-<p>prueba uno</p>
-<button (click)="login()">Login</button>
+<ion-content class="ion-padding" fullscreen>
+  <div class="login-container">
+    <!-- Logo -->
+    <img src="assets/logo-nexora.png" alt="logo de nexora" class="logo" />
+
+    <!-- Formulario -->
+    <form [formGroup]="form" (ngSubmit)="login()">
+      <ion-item>
+        <ion-label position="floating">Usuario</ion-label>
+        <ion-input type="text" formControlName="email"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input type="password" formControlName="password"></ion-input>
+      </ion-item>
+
+      <ion-button expand="block" type="submit" class="login-button" [disabled]="form.invalid">
+        Iniciar sesión
+      </ion-button>
+    </form>
+  </div>
+</ion-content>
+
