--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,8 +6,8 @@
     <!-- Formulario -->
     <form [formGroup]="form" (ngSubmit)="login()">
       <ion-item>
-        <ion-label position="floating">Usuario</ion-label>
-        <ion-input type="text" formControlName="email"></ion-input>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
 
       <ion-item>
