--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header translucent="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>usuario</ion-title>
+    <ion-buttons slot="end">
+      <ion-button color="danger" (click)="logout()">Logout</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content fullscreen="true">
+  <div class="container" *ngIf="!showScanner">
+    <ion-button expand="block" (click)="abrirScanner()">
+      Escanear QR
+    </ion-button>
+  </div>
 
-  <div id="container">
-    
+  <div class="scanner-container" *ngIf="showScanner">
+    <ion-button fill="clear" color="medium" size="small" (click)="cerrarScanner()" style="float: right;">
+      cerrar escáner
+    </ion-button>
 
+    <zxing-scanner
+      [torch]="false"
+      [tryHarder]="true"
+      (scanSuccess)="handleScan($event)">
+    </zxing-scanner>
   </div>
 </ion-content>
